# DBMSCleaner

./: .gitignore  Cargo.toml  README.md  config.json  docker-compose-up.yaml  docker-compose.yaml  docker-compose.yml  go.mod  init-test-data.sh  main.go  test-docker.sh
.github/workflow/: release.yaml
.github/workflows/: auto-cargo-update.yml  ci.yml  go.yml  release.yml  update-version.yml
cleaner/: cleaner.go
cleaner/mariadb/: mariadb_cleaner.go
cleaner/mysql/: mysql_cleaner.go
cleaner/postgresql/: postgresql_cleaner.go
database/: database.go  db_config.go
src/: colors.rs  config.rs  helpers.rs  lib.rs  logger.rs  main.rs
src/cleaner/: database_cleaner.rs  mariadb.rs  mod.rs  mysql.rs  postgres.rs
src/enums/: connection_engine.rs  log_type.rs  mod.rs
src/structs/: config.rs  logger.rs  mod.rs
src/tests/: config_test.rs  enum_test.rs  logger_test.rs  mariadb_tests.rs  mod.rs  mysql_tests.rs  postgres_test.rs  utils_tests.rs
src/traits/: database_cleaner.rs  mod.rs
src/utils/: color.rs  constant.rs  libcleaner.rs  mod.rs
util/: color.go  logger.go  util.go
