[package]
name = "DBMSCleaner"
version = "1.0.1"
edition = "2024"
repository = "https://github.com/Maxime-Cllt/DBMSCleaner.git"
description = "A simple tool to clean your DMBS in Rust"
authors = ["Maxime-Cllt"]


[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
sqlx = { version = "*", features = ["mysql", "postgres", "runtime-tokio-native-tls"] }
tokio = { version = "*", features = ["macros", "rt-multi-thread", "sync"] }
num-format = "*"
async-trait = "*"
chrono = "*"
once_cell = "*"

[dev-dependencies]

[profile.dev]
incremental = true
codegen-units = 20
opt-level = 0
panic = "unwind"
debug = true
lto = false
overflow-checks = true

[profile.release]
incremental = false
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
debug = false
lto = true
overflow-checks = false