[package]
name = "DBMSCleaner"
version = "1.0.3"
edition = "2024"
repository = "https://github.com/Maxime-Cllt/DBMSCleaner.git"
description = "A simple tool to clean your DMBS in Rust"
categories = ["command-line-interface", "database"]
keywords = ["database", "cleaner", "cli", "rust"]
license = "GPL-3"
authors = ["Maxime-Cllt"]


[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["mysql", "postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "sync"] }
num-format = "0.4.4"
async-trait = "0.1.89"
chrono = "0.4.41"
once_cell = "1.21.3"

[dev-dependencies]

[profile.dev]
incremental = true
opt-level = 0
panic = "unwind"
debug = true
lto = false
overflow-checks = true

[profile.release]
incremental = false
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
debug = false
lto = true
overflow-checks = false